--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -25,9 +25,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage");
 </head>
 <body>
   <img 
-    srcset="https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoExtraSmall.png 270w,
-            https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoSmall.png 540w,
-            https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoLarge.png 1081w"
+    srcset="@ExtraSmallImage 270w, @SmallImage 540w, @LargeImage 1081w"
     sizes="(max-width: 270px) 270px,
            (max-width: 540px) 540px,
            1081px"  
