--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -29,7 +29,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage");
     sizes="(max-width: 270px) 270px,
            (max-width: 540px) 540px,
            1081px"  
-    src="https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoLarge.png" 
+    src="@LargeImage" 
     alt="Umbraco Logo" />
 </body>
 </html>
