--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -21,18 +21,10 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  @*<title>Responsive Umbraco Logo image</title>*@
+  <title>Responsive Umbraco Logo image</title>
 </head>
 <body>
   <img 
-  @*
-    srcset="@ExtraSmallImage 270w, @SmallImage 540w, @LargeImage 1081w"
-    sizes="(max-width: 270px) 270px,
-           (max-width: 540px) 540px,
-           1081px"  
-    src="@LargeImage" 
-    alt="Umbraco Logo" />
- *@
     srcset="https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoExtraSmall.png 270w,
             https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoSmall.png 540w,
             https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoLarge.png 1081w"
@@ -42,5 +34,4 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
     src="https://raw.githubusercontent.com/Swimburger/ResponsiveUmbracoImages/master/UmbracoLogoLarge.png" 
     alt="Umbraco Logo" />
 </body>
-</html>
 </html>
