Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -5,6 +5,11 @@
 
 var content = (ContentModels.Block5)Model.Content;
 
+
+var ExtraSmallImage = content.Value<IPublishedContent>("extraSmallImage").Url;
+var SmallImage = content.Value<IPublishedContent>("smallImage").Url; 
+var LargeImage = content.Value<IPublishedContent>("largeImage").Url; 
+
 }
 
 <!DOCTYPE html>
