Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -12,6 +12,10 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
 
 }
 
+<p>@ExtraSmallImage</p>
+<p>@SmallImage</p>
+<p>@LargeImage</p>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
