--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -25,9 +25,9 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
 <body>
   <picture>
     <source srcset="ExtraSmallImage" media="(max-width: 270px)" sizes="270px" />
-    <source srcset="SmallImage" media="(max-width: 540px)" sizes="540px" />
-    <source srcset="LargeImage" sizes="1081px" />
-    <img src="LargeImage" alt="Umbraco Logo" />
+    <source srcset="@SmallImage" media="(max-width: 540px)" sizes="540px" />
+    <source srcset="@LargeImage" sizes="1081px" />
+    <img src="@LargeImage" alt="Umbraco Logo" />
   </picture>
 </body>
 </html>
