--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -24,10 +24,10 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
 </head>
 <body>
   <picture>
-    <source srcset="@ExtraSmallImage.ToString()" media="(max-width: 270px)" sizes="270px" />
-    <source srcset="@SmallImage.ToString()" media="(max-width: 540px)" sizes="540px" />
-    <source srcset="@LargeImage.ToString()" sizes="1081px" />
-    <img src="@LargeImage.ToString()" alt="Umbraco Logo" />
+    <source srcset="@ExtraSmallImage" media="(max-width: 270px)" sizes="270px" />
+    <source srcset="@SmallImage" media="(max-width: 540px)" sizes="540px" />
+    <source srcset="@LargeImage" sizes="1081px" />
+    <img src="@LargeImage" alt="Umbraco Logo" />
   </picture>
 </body>
 </html>
