--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -27,7 +27,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
     <source srcset=url(@ExtraSmallImage) media="(max-width: 270px)" sizes="270px" />
     <source srcset=url(@SmallImage) media="(max-width: 540px)" sizes="540px" />
     <source srcset=url(@LargeImage) sizes="1081px" />
-    <img src=@url(@LargeImage) alt="Umbraco Logo" />
+    <img src=url(@LargeImage) alt="Umbraco Logo" />
   </picture>
 </body>
 </html>
