Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -7,7 +7,7 @@ var content = (ContentModels.Block5)Model.Content;
 var ExtraSmallImage = content.Value<IPublishedContent>("extraSmallImage").Url;
 var SmallImage = content.Value<IPublishedContent>("smallImage").Url; 
 var LargeImage = content.Value<IPublishedContent>("largeImage").Url; 
-
+var teste = content
 }
 
 <p>@ExtraSmallImage</p>
@@ -30,6 +30,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
     <source srcset='@LargeImage' sizes="1081px" />
     <img src='@LargeImage' alt="Umbraco Logo" />
     *@
+    
   </picture>
 </body>
 </html>
