Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -7,7 +7,6 @@ var content = (ContentModels.Block5)Model.Content;
 var ExtraSmallImage = content.Value<IPublishedContent>("extraSmallImage").Url;
 var SmallImage = content.Value<IPublishedContent>("smallImage").Url; 
 var LargeImage = content.Value<IPublishedContent>("largeImage").Url; 
-var teste = content
 }
 
 <p>@ExtraSmallImage</p>
@@ -24,10 +23,10 @@ var teste = content
 </head>
 <body>
   <picture>
-    <source srcset={@ExtraSmallImage;} media="(max-width: 270px)" sizes="270px" />
-    <source srcset={@SmallImage;} media="(max-width: 540px)" sizes="540px" />
-    <source srcset={@LargeImage;} sizes="1081px" />
-    <img src={@LargeImage;} alt="Umbraco Logo" />
+    <source srcset={@ExtraSmallImage} media="(max-width: 270px)" sizes="270px" />
+    <source srcset={@SmallImage} media="(max-width: 540px)" sizes="540px" />
+    <source srcset={@LargeImage} sizes="1081px" />
+    <img src={@LargeImage} alt="Umbraco Logo" />
   </picture>
 </body>
 </html>
