Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -31,9 +31,9 @@ var teste = content
     <img src=@LargeImage alt="Umbraco Logo" />
     *@
         <source srcset="/media/a1dpu3f1/rubik-small.jpg" media="(max-width: 270px)" sizes="270px" />
-    <source srcset=@SmallImage media="(max-width: 540px)" sizes="540px" />
-    <source srcset=@LargeImage sizes="1081px" />
-    <img src=@LargeImage alt="Umbraco Logo" />
+    <source srcset="/media/sqkdbjkm/umbracologosmall.png" media="(max-width: 540px)" sizes="540px" />
+    <source srcset="/media/322fizei/umbracologolarge.png" sizes="1081px" />
+    <img src="/media/322fizei/umbracologolarge.png" alt="Umbraco Logo" />
     
     
   </picture>
