--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -23,10 +23,10 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
 </head>
 <body>
   <picture>
-    <source srcset="~/media/@ExtraSmallImage" media="(max-width: 270px)" sizes="270px" />
-    <source srcset="~/media/@SmallImage" media="(max-width: 540px)" sizes="540px" />
-    <source srcset="~/media/@LargeImage" sizes="1081px" />
-    <img src="~/media/@LargeImage" alt="Umbraco Logo" />
+    <source srcset=@"{ExtraSmallImage}" media="(max-width: 270px)" sizes="270px" />
+    <source srcset=@"{SmallImage}" media="(max-width: 540px)" sizes="540px" />
+    <source srcset=@"{LargeImage}" sizes="1081px" />
+    <img src="{LargeImage}" alt="Umbraco Logo" />
     @*
     <source srcset="/media/4p0d2lj4/umbracologoextrasmall.png" media="(max-width: 270px)" sizes="270px" />
     <source srcset="/media/a1dpu3f1/rubik-small.jpg" media="(max-width: 540px)" sizes="540px" />
