Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -26,7 +26,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
     <source srcset=@{ExtraSmallImage} media="(max-width: 270px)" sizes="270px" />
     <source srcset=@{SmallImage} media="(max-width: 540px)" sizes="540px" />
     <source srcset=@{LargeImage} sizes="1081px" />
-    <img src=@"{LargeImage} alt="Umbraco Logo" />
+    <img src=@{LargeImage} alt="Umbraco Logo" />
     @*
     <source srcset="/media/4p0d2lj4/umbracologoextrasmall.png" media="(max-width: 270px)" sizes="270px" />
     <source srcset="/media/a1dpu3f1/rubik-small.jpg" media="(max-width: 540px)" sizes="540px" />
