Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -22,11 +22,20 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
   @*<title>Responsive Umbraco Logo image using picture</title>*@
 </head>
 <body>
-  <picture>
+ @* <picture>
     <source srcset=@ExtraSmallImage media="(max-width: 270px)" sizes="270px" />
     <source srcset=@SmallImage media="(max-width: 540px)" sizes="540px" />
     <source srcset=@LargeImage sizes="1081px" />
-    <img src=@LargeImage alt="Umbraco Logo" />
+    <img src=@LargeImage alt="Umbraco Logo" />*@
+    
+    <picture>
+    <source srcset="@img.GetCropUrl("1:1 Large")" media="(min-width: 1281px)">
+    <source srcset="@img.GetCropUrl("1:1 Medium")" media="(min-width: 1025px)">
+    <source srcset="@img.GetCropUrl("1:1 Small")" media="(min-width: 641px)">
+    <img class="img-responsive" srcset="@img.GetCropUrl("1:1 Extra Small")" alt="@altText">
+</picture>
+    
+    
     @*
     <source srcset="/media/4p0d2lj4/umbracologoextrasmall.png" media="(max-width: 270px)" sizes="270px" />
     <source srcset="/media/a1dpu3f1/rubik-small.jpg" media="(max-width: 540px)" sizes="540px" />
