Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -8,6 +8,16 @@ var ExtraSmallImage = content.Value<IPublishedContent>("extraSmallImage").Url;
 var SmallImage = content.Value<IPublishedContent>("smallImage").Url; 
 var LargeImage = content.Value<IPublishedContent>("largeImage").Url; 
 }
+
+<style type="text/css">
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+</style>
+
 @*
 <p>@ExtraSmallImage</p>
 <p>@SmallImage</p>
