Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -32,6 +32,8 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
   @*<title>Responsive Umbraco Logo image using picture</title>*@
 </head>
 <body>
+<div id="CPHBigBanner_pnlCoverPhoto">   
+ <section class="center lazy">    
   <picture>
     <source srcset="@ExtraSmallImage" media="(max-width: 270px)" sizes="270px" />
     <source srcset="@SmallImage" media="(max-width: 540px)" sizes="540px" />
@@ -43,7 +45,8 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
     <source srcset="/media/322fizei/umbracologolarge.png" sizes="1081px" />
     <img src="/media/322fizei/umbracologolarge.png" alt="Umbraco Logo" />
     *@
-    
   </picture>
+ </section>
+</div> 
 </body>
 </html>
