Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -11,6 +11,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
 
 <style type="text/css">
 .center {
+  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
