Adding template 'BlockListDocumentType'

--- a/Views/BlockListDocumentType.cshtml
+++ b/Views/BlockListDocumentType.cshtml
@@ -33,7 +33,7 @@
     @RenderSection("Header", required: false)
 </head>
 
-<body class="frontpage theme-font-@font theme-color-@colorTheme">
+<body>
     <div class="mobile-nav">
       @* <nav class="nav-bar">
            
