Adding partial-view 'BlockListDocumentType.cshtml'

--- a/Views/Partials/BlockListDocumentType.cshtml
+++ b/Views/Partials/BlockListDocumentType.cshtml
@@ -31,6 +31,10 @@
              @Html.Partial("~/Views/Partials/BlockList/Components/block5.cshtml",block)
             break;
             
+            case "Umbraco.Web.PublishedModels.Block6":
+             @Html.Partial("~/Views/Partials/BlockList/Components/block6.cshtml",block)
+            break;
+            
         }
     }
 }
