Adding partial-view 'block6.cshtml'

--- a/Views/Partials/BlockList/Components/block6.cshtml
+++ b/Views/Partials/BlockList/Components/block6.cshtml
@@ -63,5 +63,4 @@ var NumMenus = siteSettings.Value<int>("numberOfMenus");
         </ul>    
     }
 }
-
-<p>@teste</p>
+<h1>@content.Value("Teste")</h1>
