Adding partial-view 'block6.cshtml'

--- a/Views/Partials/BlockList/Components/block6.cshtml
+++ b/Views/Partials/BlockList/Components/block6.cshtml
@@ -63,4 +63,4 @@ var NumMenus = siteSettings.Value<int>("numberOfMenus");
         </ul>    
     }
 }
-<h1>@content.Value("Teste")</h1>
+<h1>@content.Value("teste")</h1>
