Adding partial-view 'block6.cshtml'

--- a/Views/Partials/BlockList/Components/block6.cshtml
+++ b/Views/Partials/BlockList/Components/block6.cshtml
@@ -1,6 +1,8 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<BlockListItem>
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
+@using Umbraco.Core.Models.PublishedContent
+@using Umbraco.Web
 @{
 
 var content = (ContentModels.Block6)Model.Content;
