Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -33,7 +33,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
 </head>
 <body>
 <div id="align-to-center">   
- <section class="center lazy">    
+ <section class="center">    
   <picture>
     <source srcset=@ExtraSmallImage media="(max-width: 270px)" sizes="270px" />
     <source srcset=@SmallImage media="(max-width: 540px)" sizes="540px" />
