Adding partial-view 'block5.cshtml'

--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -32,7 +32,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
   @*<title>Responsive Umbraco Logo image using picture</title>*@
 </head>
 <body>
-<div id="align-to-center">   
+<div id="align-center">   
  <section class="center">    
   <picture>
     <source srcset=@ExtraSmallImage media="(max-width: 270px)" sizes="270px" />
