--- a/Views/Partials/BlockList/Components/block5.cshtml
+++ b/Views/Partials/BlockList/Components/block5.cshtml
@@ -14,6 +14,7 @@ var LargeImage = content.Value<IPublishedContent>("largeImage").Url;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 55%;
 }
 </style>
 
