--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -6,7 +6,7 @@
     var searchQuery = Request.QueryString["q"];
 	IEnumerable<PublishedSearchResult> searchResults;
 }
-<div class="container">
+<div class="center">
     <form action="" method="GET">
         <input type="text" placeholder="Search..." name="q">
         <button>Search</button>
