Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -16,7 +16,7 @@
 }
 </style>
 
-<div class="center">
+<div class="container">
     <form action="" method="GET">
         <input type="text" placeholder="Search..." name="q">
         <button>Search</button>
