Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -20,6 +20,9 @@
         <input type="text" placeholder="Search..." name="q">
         <button>Search</button>
     </form>
+    </div>
+</div>
+
     
 @if (!string.IsNullOrWhiteSpace(searchQuery))
 {
