Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -8,14 +8,14 @@
 }
 
 <style type="text/css">
-.center {
+.search {
   display: block;
   margin-left: 20%;
 }
 </style>
 
 <div class="container">
-    <div class="center">
+    <div class="search">
     <form action="" method="GET">
         <input type="text" placeholder="Search..." name="q">
         <button>Search</button>
