--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -10,7 +10,9 @@
 <style type="text/css">
 .search {
   display: block;
-  margin-left: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 </style>
 
