Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -7,6 +7,8 @@
 	IEnumerable<PublishedSearchResult> searchResults;
 }
 
+    var language = @Model.Value("menuTitle",fallback: Fallback.ToLanguage)
+
 <style type="text/css">
 .search {
   display: block;
