Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -7,7 +7,7 @@
 	IEnumerable<PublishedSearchResult> searchResults;
 }
 
-    var language = @Model.Value("menuTitle",fallback: Fallback.ToLanguage)
+    var language = @content.Value("Description");
 
 <style type="text/css">
 .search {
