--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -19,8 +19,8 @@
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <input type="text" placeholder="Search..." name="q">
-        <button>Search</button>
+        <input type="text" placeholder="Pesquisar..." name="q">
+        <button>Pesquisar</button>
     </form>
     </div>
 </div>
