Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -16,6 +16,15 @@
 }
 </style>
 
+@if
+{
+
+}
+@else
+{
+
+}
+
 <div class="container">
     <div class="search">
     <form action="" method="GET">
