Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -16,13 +16,13 @@
 }
 </style>
 
-@if
+@if(@content.Value("Language") == "EN")
 {
-
+    var placeholder = "Search";
 }
 @else
 {
-
+    var placeholder = "Pesquisar";        
 }
 
 <div class="container">
