Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -16,7 +16,7 @@
 }
 </style>
 
-@if(@content.Value("Language") == "EN")
+if(@content.Value("Language") == "EN")
 {
     var placeholder = "Search";
 }
