--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -31,8 +31,8 @@
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <input type="text" placeholder="Pesquisar..." name="q">
-        <button>Pesquisar</button>
+        <input type="text" placeholder=@placeholder name="q">
+        <button>@placeholder</button>
     </form>
     </div>
 </div>
