Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -18,6 +18,7 @@
 
 
 }
+<p>@placeholder</p>
 
 <style type="text/css">
 .search {
@@ -31,8 +32,8 @@
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <input type="text" placeholder="@placeholder" name="q">
-        <button>"@placeholder"</button>
+        <input type="text" placeholder="Pesquisar..." name="q">
+        <button>Pesquisar</button>
     </form>
     </div>
 </div>
