Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -9,11 +9,11 @@
 
     if(@content.Value("Language") == "EN")
     {
-        var placeholder = "Search";
+        var place = "Search";
     }
     else
     {
-        var placeholder = "Pesquisar";
+        var place = "Pesquisar";
     }
 
 
