Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -10,16 +10,16 @@
 
     if(@language == "EN")
     {
-        var place = "Search";
+        var placeholdr = "Search";
     }
     else
     {
-        var place = "Pesquisar";
+        var placeholdr = "Pesquisar";
     }
 
 
 }
-<p>@place</p>
+<p>@placeholdr</p>
 
 <style type="text/css">
 .search {
