Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -21,7 +21,7 @@
     <div class="search">
     <form action="" method="GET">
         <input type="text" placeholder="Pesquisar..." name="q">
-        <p>@language</p>
+        <h1>@language</h1>
         <button>Pesquisar</button>
     </form>
     </div>
