Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -18,7 +18,7 @@
 </style>
 
     var language = @content.Value("language");
-    @language;
+    <p>language</p>
 
 <div class="container">
     <div class="search">
