--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -17,7 +17,7 @@
 </style>
 <div class="container">
     <div class="search">
-           <h1>@content.Value("language")</h1>
+           <h1>@content.Value("lang")</h1>
     <form action="" method="GET">
         <input type="text" placeholder="Pesquisar..." name="q">
         <button>Pesquisar</button>
