--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -18,7 +18,7 @@
 </style>
 <div class="container">
     <div class="search">
-           <h1>@content.Value("lang")</h1>
+           <h1>@language</h1>
     <form action="" method="GET">
         <input type="text" placeholder="Pesquisar..." name="q">
         <button>Pesquisar</button>
