--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -19,7 +19,7 @@
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <input type="text" placeholder=@language name="q">
+        <input type="text" placeholder="Pesquisar..." name="q">
         <button>Pesquisar</button>
     </form>
     </div>
