Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -18,6 +18,7 @@
 }
 </style>
 <div class="container">
+    <div><p>@language</p></div>
     <div class="search">
     <form action="" method="GET">
         <input type="text" placeholder="Pesquisar..." name="q">
