Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -8,6 +8,7 @@
 	IEnumerable<PublishedSearchResult> searchResults;
     var teste = content.Value("lang").ToString();
 }
+<h1>@teste</h1>
 <style type="text/css">
 .search {
   display: block;
