--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -8,7 +8,7 @@
 	IEnumerable<PublishedSearchResult> searchResults;
     var teste = content.Value("lang").ToString();
 }
-<h1>@teste</h1>
+<div id="testar" style="background-color="red"> @teste style=""</div>
 <style type="text/css">
 .search {
   display: block;
