Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -8,7 +8,7 @@
 	IEnumerable<PublishedSearchResult> searchResults;
     var teste = content.Value("lang").ToString();
 }
-<div id="testar" style="background-color="red"> @teste style=""</div>
+<div id="testar" style="background-color="red";> @teste style=""</div>
 <style type="text/css">
 .search {
   display: block;
