Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -6,7 +6,7 @@
     var counter = 0;
     var searchQuery = Request.QueryString["q"];
 	IEnumerable<PublishedSearchResult> searchResults;
-    var teste = content.Value("lang").ToString();
+    var teste = content.Value("lang");
 }
 <div id="testar" style="background-color:red"> @teste</div>
 <style type="text/css">
