--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -8,44 +8,5 @@
 	IEnumerable<PublishedSearchResult> searchResults;
     var teste = content.Value("lang");
 }
-<div id="testar" style="background-color:red"> @teste</div>
-<style type="text/css">
-.search {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 55%;
-}
-</style>
-<div class="container">
-    <div class="search">
-    <form action="" method="GET">
-        <input type="text" placeholder="Pesquisar..." name="q">
-        <button>Pesquisar</button>
-    </form>
-    </div>
-</div>
-    
-@if (!string.IsNullOrWhiteSpace(searchQuery))
-{
 
-        var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty, "InternalIndex")
-	                       @* .Where(w => w.Content.IsDocumentType("blockListDocumentType"))*@;
-
-    long resultCount = results != null && results.Any() ? results.Count() : 0;
-    <div class="searchresults">
-        <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
-        @if (resultCount > 0)
-        {
-            <ul>
-                @foreach (var result in results)
-                {
-                    
-                    <li>
-                        <h3><a href="@result.Content.Url">@result.Content.Name</a></h3>
-                    </li>
-                }
-            </ul>
-        }
-    </div>
-}
+<h1>@teste</h1>
