--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -6,7 +6,7 @@
     var counter = 0;
     var searchQuery = Request.QueryString["q"];
 	IEnumerable<PublishedSearchResult> searchResults;
-    var teste = content.Value("lang");
+
 }
 
-<h1>@teste</h1>
+<h1>@content.Value("lang")</h1>
