--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -6,7 +6,46 @@
     var counter = 0;
     var searchQuery = Request.QueryString["q"];
 	IEnumerable<PublishedSearchResult> searchResults;
-
+    var teste = content.Value("lang");
 }
+<div id="testar" style="background-color:red"> @teste</div>
+<style type="text/css">
+.search {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 55%;
+}
+</style>
+<div class="container">
+    <div class="search">
+    <form action="" method="GET">
+        <input type="text" placeholder="Pesquisar..." name="q">
+        <button>Pesquisar</button>
+    </form>
+    </div>
+</div>
+    
+@if (!string.IsNullOrWhiteSpace(searchQuery))
+{
 
-<h1>@content.Value("lang")</h1>
+        var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty, "InternalIndex")
+	                       @* .Where(w => w.Content.IsDocumentType("blockListDocumentType"))*@;
+
+    long resultCount = results != null && results.Any() ? results.Count() : 0;
+    <div class="searchresults">
+        <p>We found <strong>@resultCount</strong> result@(resultCount != 1 ? "s" : "") when searching for <strong>@searchQuery</strong></p>
+        @if (resultCount > 0)
+        {
+            <ul>
+                @foreach (var result in results)
+                {
+                    
+                    <li>
+                        <h3><a href="@result.Content.Url">@result.Content.Name</a></h3>
+                    </li>
+                }
+            </ul>
+        }
+    </div>
+}
