Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -16,6 +16,17 @@
   margin-right: auto;
   width: 55%;
 }
+
+@{
+var language = content.Value("lang");
+    
+    if(language == "EN")
+    {
+        var placeholder ="Search...";
+        var searchtext ="";
+    }
+}
+    
 </style>
 <div class="container">
     <div class="search">
