Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -22,7 +22,7 @@ var language = content.Value("lang");
     
     if(language == "EN")
     {
-        var placeholder ="Search...";
+        var place ="Search...";
         var searchtext ="";
     }
 }
