--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -31,8 +31,8 @@ var language = content.Value("lang");
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <input type="text" placeholder=@placeholder name="q">
-        <button>@placeholder</button>
+        <input type="text" placeholder= name="q">
+        <button></button>
     </form>
     </div>
 </div>
