--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -31,7 +31,7 @@ var language = content.Value("lang");
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <input type="text" placeholder= name="q">
+        <input type="text" placeholder="" name="q">
         <button></button>
     </form>
     </div>
