--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -31,9 +31,8 @@ var language = content.Value("lang");
 <div class="container">
     <div class="search">
     <form action="" method="GET">
-        <p>@language</p>
         <input type="text" placeholder="" name="q">
-        <button></button>
+        <button>@language</button>
     </form>
     </div>
 </div>
