Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -19,6 +19,7 @@
 
 <div class="container">
     <div class="search">
+        <p>@language</p>
     <form action="" method="GET">
         <input type="text" placeholder="Pesquisar..." name="q">
         <button>Pesquisar</button>
