Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -2,12 +2,13 @@
 @using Umbraco.Core.Models.Blocks;
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
+    var content = (ContentModels.Block4)Model.Content;
     var counter = 0;
     var searchQuery = Request.QueryString["q"];
 	IEnumerable<PublishedSearchResult> searchResults;
-	var language = content.Value("lang");
-}
+    
 
+}
 <style type="text/css">
 .search {
   display: block;
@@ -15,14 +16,23 @@
   margin-right: auto;
   width: 55%;
 }
-</style>
 
+@{
+var language = content.Value("lang");
+    
+    if(language == "EN")
+    {
+        var place ="Search...";
+        var searchtext ="";
+    }
+}
+    
+</style>
 <div class="container">
     <div class="search">
-        <p>@language</p>
     <form action="" method="GET">
-        <input type="text" placeholder="Pesquisar..." name="q">
-        <button>Pesquisar</button>
+        <input type="text" placeholder="" name="q">
+        <button>@language</button>
     </form>
     </div>
 </div>
@@ -31,7 +41,7 @@
 {
 
         var results = Umbraco.ContentQuery.Search(searchQuery, string.Empty, "InternalIndex")
-	                       @* .Where(w => w.Content.IsDocumentType("blockListDocumentType"));
+	                       @* .Where(w => w.Content.IsDocumentType("blockListDocumentType"))*@;
 
     long resultCount = results != null && results.Any() ? results.Count() : 0;
     <div class="searchresults">
