--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -22,8 +22,8 @@ var language = content.Value("lang");
     
     if(language == "EN")
     {
-        var place ="Search...";
-        var searchtext ="";
+        var place ="Search..."
+        var searchtext =""
     }
 }
     
