--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -22,7 +22,7 @@ var language = content.Value("lang");
     
     if(language == "EN")
     {
-        <p>teste</p>
+        var place = "Search"
     }
 }
     
