Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -32,7 +32,7 @@ var language = content.Value("lang");
     <div style="background-color:red">@place</div>    
     <form action="" method="GET">
         <input type="text" placeholder="" name="q">
-        <button></button>
+        <button>@(place)</button>
     </form>
     </div>
 </div>
