--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -22,9 +22,9 @@
   margin-right: auto;
   width: 55%;
 }
-
-    
 </style>
+
+<html>
 <body>
 <div class="container">
     <div class="search">
@@ -36,6 +36,7 @@
     </div>
 </div>
 </body>
+</html>
     
 @if (!string.IsNullOrWhiteSpace(searchQuery))
 {
