--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -26,7 +26,7 @@
     <div style="background-color:red">@place</div>    
     <form action="" method="GET">
         <input type="text" placeholder="" name="q">
-        <button>place</button>
+        <button>@language</button>
     </form>
     </div>
 </div>
