Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -23,9 +23,8 @@
 <body>
 <div class="container">
     <div class="search">
-    <div style="background-color:red">@language</div>    
     <form action="" method="GET">
-        <input type="text" placeholder="" name="q">
+        <input type="text" placeholder=@language name="q">
         <button>@language</button>
     </form>
     </div>
