Adding partial-view 'block4.cshtml'

--- a/Views/Partials/BlockList/Components/block4.cshtml
+++ b/Views/Partials/BlockList/Components/block4.cshtml
@@ -10,7 +10,7 @@
 	
 	if(language.ToString()=="EN")
         {
-            var placeholder = "Search"
+            var placeholder = "Search";
         }
 
 
